[metadata]
name = ocean
version = 0.0.1
author = Caro Meysmans
author_email = caro.meysmans@ugent.be
description = Python interface to the Open Command Environment for Analysis (OCEAN)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bou4/ocean
project_urls =
    Bug Tracker = https://github.com/bou4/ocean/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
